# pybind-experiments

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: .gitkeep  build_package.yml  test.yml  test_gpu.yml
src/: CMakeLists.txt  CUDAsetup.cmake  python_defs.h
src/cpp/: foo.cc  foo.h  mysum.cc  mysum.h
src/cuda/: foo_gpu.cc  foo_gpu.cu  foo_gpu.cuh  foo_gpu.h  helper_foo.cc  helper_foo.h
src/python/: __init__.py  _foopy.py  _mysum.py  bindings.cc  config.py  config.py.in  make_install_setup.py  module.cc  module_gpu.cc
src/python/bindings/: foo_binding.h  foo_gpu_binding.h
tests/: test_imports.py  test_sum.py
